@@ -28,7 +28,8 @@ public class StudentService {
         return studentRepository.findAll()
                 .stream()
                 .map(StudentDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                //.collect(Collectors.toList());
+                .toList();
     }
 
     public StudentDTO.Response getStudentById(Long id) {
